# ControlSystemAdapter-DoocsAdapter

./: .jenkinsfile  CMakeLists.txt  Makefile
DOOCS_Adapter/: CMakeLists.txt  Makefile
DOOCS_Adapter/cmake/: Makefile.dpvatestsrv.in
DOOCS_Adapter/doc/: DOOCS_Adapter.tex  Doxyfile
DOOCS_Adapter/example/: CosadeEqFct.cc  CosadeEqFct.h  IndependentControlCore.h  Makefile  cosade_rpc_server.cc  cosade_server.cc  cosade_server.conf  eq_cosade.h
DOOCS_Adapter/example/xml/: cosade.xml
DOOCS_Adapter/include/: CSAdapterEqFct.h  DOOCSProcessVariableAdapter.hpp  DOOCSProcessVariableArray.hpp  DOOCSProcessVariableFactory.hpp  D_SettableSpectrum.hpp  D_int_mock.hpp  DoocsAdapter.h  DoocsPVFactory.h  DoocsPVManager.h  DoocsProcessArray.h  DoocsProcessScalar.h  m4uD_array.hpp  m4uD_double.hpp  m4uD_float.hpp  m4uD_int.hpp  m4uD_type.hpp  m4uD_xxx.hpp  myD_double.hpp  myD_float.hpp  myD_int.hpp  myD_int_mock.hpp  myD_xxx.hpp  splitStringAtFirstSlash.h
DOOCS_Adapter/src/: CSAdapterEqFct.cc  DoocsAdapter.cc  DoocsPVFactory.cc  DoocsPVManager.cc
DOOCS_Adapter/tests/: CTestTestfile.cmake.in  Makefile
DOOCS_Adapter/tests/dpvatestsrv/: PythonController.py  dpvatestsrv_rpc_server.cc  dpvatestsrv_server.conf  dspectrum_input1  eq_dpvatestsrv.h
DOOCS_Adapter/tests/include/: DOOCSProcessVariableAdapter_testCases_numericals.hpp  D_double_mock.hpp  D_float_mock.hpp  D_int_mock.hpp  D_string_mock.hpp  SettableSpectrum.hpp  d_fct.h  dice.hpp  emptyServerFunctions.h  eq_data.h  eq_fct.h  eq_types.h  m4uD_array_testCases_numericals.hpp  m4uD_type_testCases_numericals.hpp
DOOCS_Adapter/tests/referenceTestDoocsServer/: referenceTestDoocsServer.cc
DOOCS_Adapter/tests/src/: Makefile  testCSAdapterEqFct.cpp  testDOOCSProcessVariableAdapter.cpp  testDOOCSProcessVariableAdapter_cstring.cpp  testDOOCSProcessVariableAdapter_double.cpp  testDOOCSProcessVariableAdapter_float.cpp  testDOOCSProcessVariableAdapter_float.cpp.old.dont.compile  testDOOCSProcessVariableAdapter_int.cpp  testDOOCSProcessVariableAdapter_stdstring.cpp  testDOOCSProcessVariableAdapter_stdstring.cpp.old.dont.compile  testDOOCSProcessVariableArray.cpp  testDOOCSProcessVariableArray_float.cpp  testDOOCSProcessVariableFactory.cpp  testD_CachedSpectrum.cpp.old.dont.compile  testD_SettableSpectrum.cpp  testD_SettableSpectrum.cpp.old.dont.compile  testD_spectrum_mock.cpp  testD_spectrum_mock.cpp.old.dont.compile  testD_string_mock.cpp  testDoocsAdapter.cpp  testDoocsPVFactory.cpp  testDoocsPVFactory.cpp.stash  testDoocsProcessArray.cpp  testDoocsProcessScalar.cpp  testIndependentControlCore.cpp  testIndependentControlCoreWithStub.cpp  testSettableSpectrum.cpp  testm4uD_array_double.cpp  testm4uD_array_double.cpp.old.dont.compile  testm4uD_array_float.cpp  testm4uD_array_float.cpp.old.dont.compile  testm4uD_array_int.cpp  testm4uD_array_int.cpp.old.dont.compile  testm4uD_double.cpp  testm4uD_float.cpp  testm4uD_int.cpp  testm4uD_type_cstring.cpp  testm4uD_type_double.cpp  testm4uD_type_float.cpp  testm4uD_type_int.cpp  (+3 more)
DOOCS_Adapter/tests/testScalarsServer/: Makefile  TestScalarsEqFct.cc  TestScalarsEqFct.h  test_scalars_server.cc
doc/: Doxyfile  mainpage.dox
example/: IndependentControlCore.h  README  testCosade.py
include/: CSAdapterEqFct.h  DOOCSProcessVariableFactory.hpp  D_CachedSpectrum.hpp  D_textUnifier.h  DoocsAdapter.h  DoocsIfff.h  DoocsIiii.h  DoocsImage.h  DoocsPVFactory.h  DoocsProcessArray.h  DoocsProcessScalar.h  DoocsSpectrum.h  DoocsTransferElement.h  DoocsUpdater.h  DoocsXY.h  MappedImage.h  PropertyBase.h  PropertyDescription.h  RoutingDecorator.h  StatusHandler.h  Utilities.h  VariableMapper.h  basenameFromAddress.h  getAllVariableNames.h  splitStringAtFirstSlash.h
src/: CSAdapterEqFct.cc  D_textUnifier.cpp  DoocsAdapter.cc  DoocsIfff.cc  DoocsIiii.cc  DoocsImage.cc  DoocsPVFactory.cc  DoocsSpectrum.cc  DoocsUpdater.cc  DoocsXy.cc  PropertyBase.cc  RoutingDecorator.cc  StatusHandler.cc  Utilities.cc  VariableMapper.cc  empty_doocs_functions.cc  eq_create.cc  getAllVariableNames.cc  main.cc
tests/: CTestTestfile.cmake.in  DoocsVariableConfig.xml  EqFctTest.xml  Makefile  ReferenceTest-DoocsVariableConfig.xml  serverTestArrayPersistence-DoocsVariableConfig.xml  serverTestArrayPersistence.conf  serverTestAutoCreateLocations.conf  serverTestCallOptimiseUnmappedVariables-DoocsVariableConfig.xml  serverTestCallOptimiseUnmappedVariables.conf  serverTestDataMatching-DoocsVariableConfig.xml  serverTestErrorFlag-DoocsVariableConfig.xml  serverTestErrorFlag.conf  serverTestGlobalTurnOnOffHistory-DoocsVariableConfig.xml  serverTestGlobalTurnOnOffHistory.conf  serverTestGlobalTurnOnOffWriteable-DoocsVariableConfig.xml  serverTestGlobalTurnOnOffWriteable.conf  serverTestIfff-DoocsVariableConfig.xml  serverTestIfff.conf  serverTestIiii-DoocsVariableConfig.xml  serverTestIiii.conf  serverTestImportAllIntoLocation-DoocsVariableConfig.xml  serverTestImportAllIntoLocation.conf  serverTestIsWriteableSource-DoocsVariableConfig.xml  serverTestIsWriteableSource.conf  serverTestMultiMappedPV-DoocsVariableConfig.xml  serverTestMultiMappedPV.conf  serverTestPlainVariableCreation.conf  serverTestReadWrite.conf  serverTestRegression-noMatchingMPNumber-DoocsVariableConfig.xml  serverTestRegression-noMatchingMPNumber.conf  serverTestRegression_noMatchingMPNumber.conf  serverTestRenameImport-DoocsVariableConfig.xml  serverTestRenameImport.conf  serverTestRetypeProperties-DoocsVariableConfig.xml  serverTestRetypeProperties.conf  serverTestSetError-DoocsVariableConfig.xml  serverTestSetError.conf  serverTestSpectrumArray-DoocsVariableConfig.xml  serverTestSpectrumArray.conf  (+16 more)
tests/dpvatestsrv/: eq_dpvatestsrv.h
tests/include/: DOOCSProcessVariableAdapter_testCases_numericals.hpp  ExtendedTestApplication.h  ZeroMQFixture.h  emptyServerFunctions.h  m4uD_array_testCases_numericals.hpp  m4uD_type_testCases_numericals.hpp  serverBasedTestTools.h  set_doocs_value.h
tests/referenceTestDoocsServer/: Makefile  referenceTestDoocsServer.cc  referenceTestDoocsServer.conf
tests/src/: Makefile  serverTestXy.cpp  (+43 more)
xmlschema/: doocs_variable_tree.xsd
(+24 files in other folders)
